--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
         android:layout_width="match_parent"
-        android:gravity="center"
         android:layout_height="wrap_content"
-        android:text="Hello, Vasiliy!"
-        android:textSize="32dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="cursive"
+        android:gravity="center"
+        android:text="Hello, Vasiliy!"
         android:textColor="#ffa900"
-        android:layout_marginTop="16dp" />
+        android:textSize="32dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Hint"
+        android:layout_margin="16dp" />
 
 </LinearLayout>
