--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,13 +29,13 @@
         android:layout_gravity="center"
         android:text="Button"
         android:textColor="#ddff00" />
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_margin="16dp"
         android:gravity="center"
-        android:layout_margin="16dp">
+        android:orientation="horizontal">
 
         <Switch
             android:layout_width="wrap_content"
@@ -52,6 +52,12 @@
             android:layout_height="wrap_content" />
 
     </LinearLayout>
+
+    <CalendarView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:background="@color/purple_200" />
 
 
 </LinearLayout>
